# optionai

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: strategy.instructions.md  trading-logs.instructions.md
.github/prompts/: analyze-trading-performance.prompt.md
docs/: CHANGELOG.md  eurusd-otc-binary-run-2026-04-09.md  implementation-status.md  project-status-2026-04-09.md  runtime-update-2026-04-09.md  trade-journal-schema.md
sql/: 001_initial_schema.sql
src/: __init__.py
src/bot/: __init__.py  bot_runner.py  broker_adapter.py  campaign_runner.py  cli.py  config.py  dashboard_session.py  db.py  desktop_dashboard.py  duplicate_guard.py  env.py  iqoption_adapter.py  iqoption_dashboard.py  iqoption_market_data.py  iqoption_sanity.py  journal_service.py  market_data.py  metrics_queries.py  models.py  practice_harness.py  runtime_logging.py  safety.py  scheduler.py  signal_engine.py  stats_service.py  trade_journal.py
tests/: test_bot_runner.py  test_campaign_runner.py  test_dashboard_session.py  test_desktop_dashboard.py  test_duplicate_guard_and_runtime_logging.py  test_iqoption_adapter.py  test_iqoption_dashboard.py  test_iqoption_sanity.py  test_journal_service_and_broker_adapter.py  test_safety_and_scheduler.py  test_signal_engine.py  test_stats_service.py  test_trade_journal_repository.py
